@startuml pomodoro_domain
left to right direction

class User {
  +id : UUID
  +email : string
  +password : string
  +updatedAt : long
}

class Parameters {
  +id : int
  +autostartWork : bool
  +autostartRest : bool
  +autoRestartCycle : bool
  +notificationsOn : bool
  +updatedAt : long
}

class Task {
  +id : UUID
  +title : string
  +description : string
  +estimatedTime : int
  +progress : int
  +creationDate : DateTime
  +startDate : DateTime
  +timeSpent : int
  +endDate : DateTime
  +updatedAt : long
  +isArchived : bool
}

class History {
  +id : int
  +startTime: DateTime
  +timeSpent: int
}

class Cycle {
  +id : UUID
  +name : string
  +updatedAt : long
}

class TypePeriode {
    id: int
    name: string
}

class Period {
  +id : UUID
  +time : int
  +index : int
  +updatedAt : long
}

class Status {
   +id : int
  +name : string
}

' Relations

User "1" -- "1" Parameters
User "1" -- "0..*" Task
User "1" -- "1..*" Cycle
User "1" -- "0..*" History
Cycle "1" -- "1..*" Period
Period "0..*" -- "1" TypePeriode
History "0..*" -- "1" TypePeriode
Task "0..*" -- "1" Status

@enduml
